Circles z-index fix to show the borders

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ h6 {
 .header,
 .hero,
 .hero__partners {
-    z-index: 2;
+    z-index: 9999;
     position: relative;
 }
 
